plugins {
    id 'org.springframework.boot' version '2.2.5.RELEASE'
    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
    id 'java'
    //id 'org.openjfx.javafxplugin' version '0.0.7'   // 추가
}

repositories {
    maven { url "https://repo.spring.io/milestone" }
    mavenCentral()
}

subprojects {

    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'org.springframework.boot'
    //apply plugin: 'org.openjfx.javafxplugin'

    repositories {
        maven { url "https://repo.spring.io/milestone" }
        mavenCentral()
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:2.2.5.RELEASE"
        }
        dependencies {

        }
    }

    configurations {
        developmentOnly
        runtimeClasspath {
            extendsFrom developmentOnly
        }
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        implementation 'org.springframework.boot:spring-boot-starter'
        implementation 'org.springframework.boot:spring-boot-starter-web'
        implementation 'org.reactivestreams:reactive-streams'
        implementation 'org.slf4j:slf4j-api'
        implementation 'io.springfox:springfox-swagger2:2.9.2'
        implementation 'io.springfox:springfox-swagger-ui:2.9.2'
    }

    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
    compileJava.options.encoding = 'UTF-8'

    test {
        useJUnitPlatform()
    }
}

project(':designpattern'){
    dependencies {

    }
}

project(':patternsample'){

    dependencies {

    }
}

project(':javaversion'){

    dependencies {

    }
}

//project(':javafx'){
//    dependencies {
//
//        javafx {
//            modules = [ 'javafx.controls', 'javafx.fxml' ]  // 추가
//        }
//    }
//}

project(':soap'){
    dependencies {

        implementation 'javax.xml.soap:javax.xml.soap-api:1.3.5'

        implementation 'com.sun.xml.bind:jaxb-core:2.3.0.1'
        implementation 'javax.xml.bind:jaxb-api:2.3.1'
        implementation 'com.sun.xml.bind:jaxb-impl:2.3.1'

        implementation 'com.sun.xml.messaging.saaj:saaj-impl:1.4.0'

        implementation 'io.projectreactor:reactor-core'
        implementation 'com.googlecode.json-simple:json-simple:1.1'
        implementation 'org.springframework.boot:spring-boot-starter-webflux'


    }
}

project(':samplecode'){

    dependencies {

        implementation files('../libs/ojdbc7.jar')
        implementation files('../libs/RXTXcomm.jar')
        implementation fileTree(dir : 'lib', include : [ '*.jar'] )

        implementation 'org.apache.httpcomponents:httpclient:4.5.5'
        compile files('./src/main/resources/libs/ojdbc7.jar')
        // https://mvnrepository.com/artifact/org.apache.poi/poi
        implementation 'org.apache.poi:poi:4.0.0'
        // https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
        implementation 'org.apache.poi:poi-ooxml:4.0.0'
        // https://mvnrepository.com/artifact/org.apache.poi/poi-excelant
        implementation 'org.apache.poi:poi-excelant:4.0.0'
        // https://mvnrepository.com/artifact/org.apache.poi/poi-scratchpad
        implementation 'org.apache.poi:poi-scratchpad:4.0.0'
        // https://mvnrepository.com/artifact/com.itextpdf/itextpdf
        implementation 'com.itextpdf:itextpdf:5.5.13'
        // https://mvnrepository.com/artifact/com.itextpdf.tool/xmlworker
        implementation 'com.itextpdf.tool:xmlworker:5.5.13'
        implementation 'cglib:cglib:2.2.2'
        // https://mvnrepository.com/artifact/javax.mail/mail
        implementation 'javax.mail:mail:1.4.1'
        // https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox
        implementation 'org.apache.pdfbox:pdfbox:2.0.1'

        implementation 'com.google.apis:google-api-services-drive:v3-rev160-1.25.0'

        implementation 'com.google.api-client:google-api-client:1.25.0'
        implementation "com.sparkjava:spark-core:2.7.2" // add to build.gradle (for Java users)

        implementation "de.svenkubiak:jBCrypt:0.4"

        // https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api
        implementation 'javax.xml.bind:jaxb-api:2.2.4'

        // https://mvnrepository.com/artifact/javax.mail/mail
        implementation 'javax.mail:mail:1.4.7'
        // https://mvnrepository.com/artifact/com.github.fracpete/musicg
        implementation 'com.github.fracpete:musicg:1.4.2.1'
        // https://mvnrepository.com/artifact/org.reactivestreams/reactive-streams
        implementation 'org.reactivestreams:reactive-streams:1.0.3'
        // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
        implementation 'com.fasterxml.jackson.core:jackson-databind:2.0.1'
        implementation 'org.springframework:spring-jdbc'
        implementation 'org.apache.commons:commons-dbcp2'
        implementation 'at.favre.lib:bcrypt:0.9.0'
        implementation 'at.favre.lib:bytes:1.2.0'

        implementation "com.google.zxing:core:3.3.0"
        implementation 'com.google.zxing:javase:3.3.0'

        implementation group: 'org.openmuc', name: 'jrxtx', version: '1.0.0'
        // https://mvnrepository.com/artifact/org.openjfx/javafx-graphics
        // TODO - MAC/WINDOWS에 대한 java fx 버전 체크 필요
        //implementation group: 'org.openjfx', name: 'javafx-graphics', version: '11.0.2', classifier : 'mac'
        //implementation group: 'org.openjfx', name: 'javafx-controls', version: '11.0.2', classifier : 'mac'

    }
}


